--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
     <div class="container">
       <input id="input" autocomplete="false" ></input>
       <input id="output"></input>
-      <button onClick="convert();">Convert</button>
+      <button onClick="convert();">Convert</button> <!-- Calls Convert Function onCLick -->
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
